<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/counterNameET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:ems="13"
        android:inputType="text"
        android:hint="@string/counterName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/salaryAmountET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counterNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:ems="13"
        android:hint="@string/salaryAmount"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/hoursDailyET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salaryAmountET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:ems="13"
        android:hint="@string/hoursDaily"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/daysTotalET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hoursDailyET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"

        android:layout_marginTop="25dp"
        android:ems="13"
        android:hint="@string/daysTotal"
        android:importantForAutofill="no"
        android:inputType="number" />


    <Button
        android:id="@+id/SaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daysTotalET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>